--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,9 @@
         padding-top: 16px;
     }
 
-    .banner {
-        margin-top: 8.7rem; /*4.7 rem*/
-        padding-top: 50px;
+    .hero {
+        margin-top: 4.7rem; /*4.7 rem*/
+        padding-top: 16px;
     }
 }
 
