--- a/css/apartment_style.css
+++ b/css/apartment_style.css
@@ -12,11 +12,12 @@
 {
     header {
         /*height: 20px !important;*/ /*4.8rem*/ /*5.55rem 12px = 0.75rem*/
-        padding-top: 20px;
+        padding-top: 30px;
+        height: 88px !important;
     }
 
     .banner {
-        padding-top: 16px;
+        padding-top: 30px;
     }
 }
 
