--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,16 @@
     }
 
     .hero {
-        margin-top: 4.7rem; /*4.7 rem*/
+        /*margin-top: 4.7rem; 4.7 rem*/
+        padding-top: 16px;
+    }
+
+    .banner {
+        /*margin-top: 4.7rem; 4.7 rem*/
+        padding-top: 16px;
+    }
+
+    .hero .banner {
         padding-top: 16px;
     }
 }
