--- a/css/style.css
+++ b/css/style.css
@@ -15,17 +15,8 @@
         padding-top: 16px;
     }
 
-    .hero {
+    .bannercontainer {
         /*margin-top: 4.7rem; 4.7 rem*/
-        padding-top: 16px;
-    }
-
-    .banner {
-        /*margin-top: 4.7rem; 4.7 rem*/
-        padding-top: 16px;
-    }
-
-    .hero .banner {
         padding-top: 16px;
     }
 }
