--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,10 @@
         padding-top: 16px;
     }
 
-    .bannercontainer {
+    .havay {
         /*margin-top: 4.7rem; 4.7 rem*/
-        padding-top: 16px;
+        width: 100%;
+        height: 16px;
     }
 }
 
