--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,13 @@
 {
     header {
         /*height: 20px !important;*/ /*4.8rem*/ /*5.55rem 12px = 0.75rem*/
-        padding-top: 16px;
+        padding-top: 25px; /*16px*/
     }
 
     .havay {
         /*margin-top: 4.7rem; 4.7 rem*/
         width: 100%;
-        height: 16px;
+        height: 25px;
     }
 }
 
